--- a/test.html
+++ b/test.html
@@ -12,16 +12,22 @@
     <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css"/>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/styles.css"/>
+    <link href="css/age-verification.css" rel="stylesheet">
     <!-- Slide Plugin -->
     <link rel="stylesheet" href="./assets/css/jquery.slideye.min.css"/>
     <script type="text/javascript" src="assets/js/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.dotdotdot.min.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script src="js/age-verification.js"></script>
+
   </head>
 
   <body id="fr">
 	<!-- Main Start -->
 	<div class="main">
+
 
     <!-- Main Header Start -->
         <header class="main-header">
@@ -173,7 +179,7 @@
 				<!-- THUMBNAIL 1 -->
 					<div class="library-movie-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/c1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -186,7 +192,7 @@
 				<!-- THUMBNAIL 2 -->
 					<div class="library-movie-col">
 						<div class="library-container">
-							<img src="images/gris.png" alt="Movie cover">
+							<img src="assets/images/c2.jpg" alt="Movie cover">
 							<div class="caption">
 								<h4>Movie title</h4>
 								<p>
@@ -199,7 +205,7 @@
 				<!-- THUMBNAIL 3 -->
 					<div class="library-movie-col">
 						<div class="library-container">
-							<img src="images/gris.png" alt="Movie cover">
+							<img src="assets/images/c3.jpg" alt="Movie cover">
 							<div class="caption">
 								<h4>Movie title</h4>
 								<p>
@@ -212,7 +218,7 @@
 				<!-- THUMBNAIL 4 -->
 					<div class="library-movie-col">
 						<div class="library-container">
-							<img src="images/gris.png" alt="Movie cover">
+							<img src="assets/images/c4.jpg" alt="Movie cover">
 							<div class="caption">
 								<h4>Movie title</h4>
 								<p>
@@ -225,7 +231,7 @@
 				<!-- THUMBNAIL 5 -->
 					<div class="library-movie-col">
 						<div class="library-container">
-							<img src="images/gris.png" alt="Movie cover">
+							<img src="assets/images/c5.jpg" alt="Movie cover">
 							<div class="caption">
 								<h4>Movie title</h4>
 								<p>
@@ -244,7 +250,7 @@
 				<!-- TITLE -->
 				<h2>FEATURED MOVIES</h2>
 			</div>
-			<dstyleiv class="container">
+			<div class="container">
 
 				<ul class="filter-genre">
 					<li class="filter-genre ACTIVE"><a href="">All</a></li><!--
@@ -257,7 +263,7 @@
 						<!-- THUMBNAIL 1 -->
 						<div class="library-featured-col">
 								<div class="library-container">
-									<img src="images/gris.png" alt="Movie cover">
+									<img src="assets/images/m1.jpg" alt="Movie cover">
 									<div class="caption">
 										<h4>Movie title</h4>
 										<p>
@@ -270,7 +276,7 @@
 						<!-- THUMBNAIL 2 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -282,7 +288,7 @@
 						<!-- THUMBNAIL 3 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -294,7 +300,7 @@
 						<!-- THUMBNAIL 4 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -306,7 +312,7 @@
 						<!-- THUMBNAIL 5 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -318,7 +324,7 @@
 						<!-- THUMBNAIL 6 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -333,7 +339,7 @@
 						<!-- THUMBNAIL 1 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -346,7 +352,7 @@
 						<!-- THUMBNAIL 2 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -358,7 +364,7 @@
 						<!-- THUMBNAIL 3 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -370,7 +376,7 @@
 						<!-- THUMBNAIL 4 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -382,7 +388,7 @@
 						<!-- THUMBNAIL 5 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -394,7 +400,7 @@
 						<!-- THUMBNAIL 6 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -411,7 +417,7 @@
 						<!-- THUMBNAIL 1 -->
 						<div class="library-featured-col">
 								<div class="library-container">
-									<img src="images/gris.png" alt="Movie cover">
+									<img src="assets/images/m1.jpg" alt="Movie cover">
 									<div class="caption">
 										<h4>Movie title</h4>
 										<p>
@@ -424,7 +430,7 @@
 						<!-- THUMBNAIL 2 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -436,7 +442,7 @@
 						<!-- THUMBNAIL 3 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -448,7 +454,7 @@
 						<!-- THUMBNAIL 4 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -460,7 +466,7 @@
 						<!-- THUMBNAIL 5 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -472,7 +478,7 @@
 						<!-- THUMBNAIL 6 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -487,7 +493,7 @@
 						<!-- THUMBNAIL 1 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -500,7 +506,7 @@
 						<!-- THUMBNAIL 2 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -512,7 +518,7 @@
 						<!-- THUMBNAIL 3 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -524,7 +530,7 @@
 						<!-- THUMBNAIL 4 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -536,7 +542,7 @@
 						<!-- THUMBNAIL 5 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
@@ -548,7 +554,7 @@
 						<!-- THUMBNAIL 6 -->
 						<div class="library-featured-col">
 							<div class="library-container">
-								<img src="images/gris.png" alt="Movie cover">
+								<img src="assets/images/m1.jpg" alt="Movie cover">
 								<div class="caption">
 									<h4>Movie title</h4>
 									<p>
